lib/src/gen/zenoh_dart_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/zenoh_dart.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class ZenohDartBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  ZenohDartBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  ZenohDartBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Library Management
  int zenoh_init_logger() {
    return _zenoh_init_logger();
  }

  late final _zenoh_init_loggerPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('zenoh_init_logger');
  late final _zenoh_init_logger =
      _zenoh_init_loggerPtr.asFunction<int Function()>();

  /// Session Management
  ffi.Pointer<ZenohSession> zenoh_open_session(
    ffi.Pointer<ffi.Char> mode,
    ffi.Pointer<ffi.Char> endpoint,
  ) {
    return _zenoh_open_session(
      mode,
      endpoint,
    );
  }

  late final _zenoh_open_sessionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ZenohSession> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('zenoh_open_session');
  late final _zenoh_open_session = _zenoh_open_sessionPtr.asFunction<
      ffi.Pointer<ZenohSession> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void zenoh_close_session(
    ffi.Pointer<ZenohSession> session,
  ) {
    return _zenoh_close_session(
      session,
    );
  }

  late final _zenoh_close_sessionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ZenohSession>)>>(
          'zenoh_close_session');
  late final _zenoh_close_session = _zenoh_close_sessionPtr
      .asFunction<void Function(ffi.Pointer<ZenohSession>)>();

  /// Publisher
  ffi.Pointer<ZenohPublisher> zenoh_declare_publisher(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _zenoh_declare_publisher(
      session,
      key,
    );
  }

  late final _zenoh_declare_publisherPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ZenohPublisher> Function(ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>)>>('zenoh_declare_publisher');
  late final _zenoh_declare_publisher = _zenoh_declare_publisherPtr.asFunction<
      ffi.Pointer<ZenohPublisher> Function(
          ffi.Pointer<ZenohSession>, ffi.Pointer<ffi.Char>)>();

  int zenoh_publisher_put(
    ffi.Pointer<ZenohPublisher> publisher,
    ffi.Pointer<ffi.Uint8> data,
    int len,
  ) {
    return _zenoh_publisher_put(
      publisher,
      data,
      len,
    );
  }

  late final _zenoh_publisher_putPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ZenohPublisher>, ffi.Pointer<ffi.Uint8>,
              ffi.Size)>>('zenoh_publisher_put');
  late final _zenoh_publisher_put = _zenoh_publisher_putPtr.asFunction<
      int Function(ffi.Pointer<ZenohPublisher>, ffi.Pointer<ffi.Uint8>, int)>();

  int zenoh_publisher_delete(
    ffi.Pointer<ZenohPublisher> publisher,
  ) {
    return _zenoh_publisher_delete(
      publisher,
    );
  }

  late final _zenoh_publisher_deletePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ZenohPublisher>)>>(
      'zenoh_publisher_delete');
  late final _zenoh_publisher_delete = _zenoh_publisher_deletePtr
      .asFunction<int Function(ffi.Pointer<ZenohPublisher>)>();

  void zenoh_undeclare_publisher(
    ffi.Pointer<ZenohPublisher> publisher,
  ) {
    return _zenoh_undeclare_publisher(
      publisher,
    );
  }

  late final _zenoh_undeclare_publisherPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ZenohPublisher>)>>(
      'zenoh_undeclare_publisher');
  late final _zenoh_undeclare_publisher = _zenoh_undeclare_publisherPtr
      .asFunction<void Function(ffi.Pointer<ZenohPublisher>)>();

  /// Subscriber
  ffi.Pointer<ZenohSubscriber> zenoh_declare_subscriber(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> key,
    ZenohSubscriberCallback callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _zenoh_declare_subscriber(
      session,
      key,
      callback,
      context,
    );
  }

  late final _zenoh_declare_subscriberPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ZenohSubscriber> Function(
              ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>,
              ZenohSubscriberCallback,
              ffi.Pointer<ffi.Void>)>>('zenoh_declare_subscriber');
  late final _zenoh_declare_subscriber =
      _zenoh_declare_subscriberPtr.asFunction<
          ffi.Pointer<ZenohSubscriber> Function(
              ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>,
              ZenohSubscriberCallback,
              ffi.Pointer<ffi.Void>)>();

  void zenoh_undeclare_subscriber(
    ffi.Pointer<ZenohSubscriber> subscriber,
  ) {
    return _zenoh_undeclare_subscriber(
      subscriber,
    );
  }

  late final _zenoh_undeclare_subscriberPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ZenohSubscriber>)>>(
      'zenoh_undeclare_subscriber');
  late final _zenoh_undeclare_subscriber = _zenoh_undeclare_subscriberPtr
      .asFunction<void Function(ffi.Pointer<ZenohSubscriber>)>();

  /// Queryable
  ffi.Pointer<ZenohQueryable> zenoh_declare_queryable(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> key_expr,
    ZenohQueryCallback callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _zenoh_declare_queryable(
      session,
      key_expr,
      callback,
      context,
    );
  }

  late final _zenoh_declare_queryablePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ZenohQueryable> Function(
              ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>,
              ZenohQueryCallback,
              ffi.Pointer<ffi.Void>)>>('zenoh_declare_queryable');
  late final _zenoh_declare_queryable = _zenoh_declare_queryablePtr.asFunction<
      ffi.Pointer<ZenohQueryable> Function(ffi.Pointer<ZenohSession>,
          ffi.Pointer<ffi.Char>, ZenohQueryCallback, ffi.Pointer<ffi.Void>)>();

  void zenoh_undeclare_queryable(
    ffi.Pointer<ZenohQueryable> queryable,
  ) {
    return _zenoh_undeclare_queryable(
      queryable,
    );
  }

  late final _zenoh_undeclare_queryablePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ZenohQueryable>)>>(
      'zenoh_undeclare_queryable');
  late final _zenoh_undeclare_queryable = _zenoh_undeclare_queryablePtr
      .asFunction<void Function(ffi.Pointer<ZenohQueryable>)>();

  void zenoh_query_reply(
    ffi.Pointer<ffi.Void> reply_context,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Uint8> data,
    int len,
  ) {
    return _zenoh_query_reply(
      reply_context,
      key,
      data,
      len,
    );
  }

  late final _zenoh_query_replyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint8>, ffi.Size)>>('zenoh_query_reply');
  late final _zenoh_query_reply = _zenoh_query_replyPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint8>, int)>();

  /// Ad-hoc Operations
  int zenoh_put(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Uint8> data,
    int len,
  ) {
    return _zenoh_put(
      session,
      key,
      data,
      len,
    );
  }

  late final _zenoh_putPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ZenohSession>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint8>, ffi.Size)>>('zenoh_put');
  late final _zenoh_put = _zenoh_putPtr.asFunction<
      int Function(ffi.Pointer<ZenohSession>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint8>, int)>();

  int zenoh_delete(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _zenoh_delete(
      session,
      key,
    );
  }

  late final _zenoh_deletePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>)>>('zenoh_delete');
  late final _zenoh_delete = _zenoh_deletePtr.asFunction<
      int Function(ffi.Pointer<ZenohSession>, ffi.Pointer<ffi.Char>)>();

  /// Query (Get)
  void zenoh_get_async(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> selector,
    ZenohGetCallback callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _zenoh_get_async(
      session,
      selector,
      callback,
      context,
    );
  }

  late final _zenoh_get_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ZenohSession>, ffi.Pointer<ffi.Char>,
              ZenohGetCallback, ffi.Pointer<ffi.Void>)>>('zenoh_get_async');
  late final _zenoh_get_async = _zenoh_get_asyncPtr.asFunction<
      void Function(ffi.Pointer<ZenohSession>, ffi.Pointer<ffi.Char>,
          ZenohGetCallback, ffi.Pointer<ffi.Void>)>();

  /// Scouting
  void zenoh_scout(
    ffi.Pointer<ffi.Char> what,
    ffi.Pointer<ffi.Char> config,
    ffi.Pointer<
            ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char> info)>>
        callback,
  ) {
    return _zenoh_scout(
      what,
      config,
      callback,
    );
  }

  late final _zenoh_scoutPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Void Function(
                          ffi.Pointer<ffi.Char> info)>>)>>('zenoh_scout');
  late final _zenoh_scout = _zenoh_scoutPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Void Function(ffi.Pointer<ffi.Char> info)>>)>();

  /// Helpers
  void zenoh_free_string(
    ffi.Pointer<ffi.Char> str,
  ) {
    return _zenoh_free_string(
      str,
    );
  }

  late final _zenoh_free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'zenoh_free_string');
  late final _zenoh_free_string =
      _zenoh_free_stringPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();
}

final class ZenohSession extends ffi.Opaque {}

final class ZenohPublisher extends ffi.Opaque {}

final class ZenohSubscriber extends ffi.Opaque {}

final class ZenohQueryable extends ffi.Opaque {}

/// Callback Types
typedef ZenohSubscriberCallback
    = ffi.Pointer<ffi.NativeFunction<ZenohSubscriberCallbackFunction>>;
typedef ZenohSubscriberCallbackFunction = ffi.Void Function(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Uint8> value,
    ffi.Size len,
    ffi.Pointer<ffi.Char> kind,
    ffi.Pointer<ffi.Char> attachment,
    ffi.Pointer<ffi.Void> context);
typedef DartZenohSubscriberCallbackFunction = void Function(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Uint8> value,
    int len,
    ffi.Pointer<ffi.Char> kind,
    ffi.Pointer<ffi.Char> attachment,
    ffi.Pointer<ffi.Void> context);
typedef ZenohQueryCallback
    = ffi.Pointer<ffi.NativeFunction<ZenohQueryCallbackFunction>>;
typedef ZenohQueryCallbackFunction = ffi.Void Function(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> selector,
    ffi.Pointer<ffi.Uint8> value,
    ffi.Size len,
    ffi.Pointer<ffi.Char> kind,
    ffi.Pointer<ffi.Void> reply_context,
    ffi.Pointer<ffi.Void> user_context);
typedef DartZenohQueryCallbackFunction = void Function(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> selector,
    ffi.Pointer<ffi.Uint8> value,
    int len,
    ffi.Pointer<ffi.Char> kind,
    ffi.Pointer<ffi.Void> reply_context,
    ffi.Pointer<ffi.Void> user_context);
typedef ZenohGetCallback
    = ffi.Pointer<ffi.NativeFunction<ZenohGetCallbackFunction>>;
typedef ZenohGetCallbackFunction = ffi.Void Function(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Uint8> value,
    ffi.Size len,
    ffi.Pointer<ffi.Char> kind,
    ffi.Pointer<ffi.Void> context);
typedef DartZenohGetCallbackFunction = void Function(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Uint8> value,
    int len,
    ffi.Pointer<ffi.Char> kind,
    ffi.Pointer<ffi.Void> context);
